Launchpad automatic translations update.

--- a/po/stellarium-skycultures/vi.po
+++ b/po/stellarium-skycultures/vi.po
@@ -8,14 +8,18 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-20 09:48+0700\n"
-"PO-Revision-Date: 2010-01-28 20:20+0000\n"
-"Last-Translator: András Mohari <andras.mohari@gmail.com>\n"
+"PO-Revision-Date: 2012-11-27 13:17+0000\n"
+"Last-Translator: thanbang <thanbang00@gmail.com>\n"
 "Language-Team: Vietnamese <vi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-21 04:45+0000\n"
-"X-Generator: Launchpad (build 16293)\n"
+"X-Launchpad-Export-Date: 2012-11-28 04:38+0000\n"
+"X-Generator: Launchpad (build 16309)\n"
+
+#: skycultures/western/star_names.fab:20
+msgid "Polaris"
+msgstr "Sao Bắc Cực"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -1569,7 +1573,7 @@ msgstr ""
 
 #: skycultures/chinese/constellation_names.eng.fab:2
 msgid "Curved Array"
-msgstr ""
+msgstr "Bắc Đẩu"
 
 #: skycultures/chinese/constellation_names.eng.fab:3
 msgid "Coiled Thong"
@@ -3861,7 +3865,7 @@ msgstr ""
 
 #: skycultures/western/constellation_names.eng.fab:13
 msgid "Cancer"
-msgstr ""
+msgstr "Cự Giải"
 
 #: skycultures/western/constellation_names.eng.fab:14
 msgid "Capricornus"
@@ -3869,7 +3873,7 @@ msgstr ""
 
 #: skycultures/western/constellation_names.eng.fab:15
 msgid "Carina"
-msgstr ""
+msgstr "Đáy Thuyền"
 
 #: skycultures/western/constellation_names.eng.fab:16
 msgid "Cassiopeia"
@@ -3877,15 +3881,15 @@ msgstr ""
 
 #: skycultures/western/constellation_names.eng.fab:17
 msgid "Centaurus"
-msgstr ""
+msgstr "Bán Nhân Mã"
 
 #: skycultures/western/constellation_names.eng.fab:18
 msgid "Cepheus"
-msgstr ""
+msgstr "Tiên Vương"
 
 #: skycultures/western/constellation_names.eng.fab:19
 msgid "Coma Berenices"
-msgstr ""
+msgstr "Tóc Tiên"
 
 #: skycultures/western/constellation_names.eng.fab:20
 msgid "Canes Venatici"
@@ -3893,7 +3897,7 @@ msgstr ""
 
 #: skycultures/western/constellation_names.eng.fab:21
 msgid "Auriga"
-msgstr ""
+msgstr "Ngự Phu"
 
 #: skycultures/western/constellation_names.eng.fab:22
 msgid "Columba"
@@ -3909,11 +3913,11 @@ msgstr ""
 
 #: skycultures/western/constellation_names.eng.fab:25
 msgid "Corona Australis"
-msgstr ""
+msgstr "Nam Miện"
 
 #: skycultures/western/constellation_names.eng.fab:26
 msgid "Corona Borealis"
-msgstr ""
+msgstr "Bắc Miện"
 
 #: skycultures/western/constellation_names.eng.fab:27
 msgid "Corvus"
@@ -3921,11 +3925,11 @@ msgstr ""
 
 #: skycultures/western/constellation_names.eng.fab:28
 msgid "Crux"
-msgstr ""
+msgstr "Nam Tào"
 
 #: skycultures/western/constellation_names.eng.fab:29
 msgid "Cygnus"
-msgstr ""
+msgstr "Thiên Nga"
 
 #: skycultures/western/constellation_names.eng.fab:30
 msgid "Delphinus"
@@ -3937,7 +3941,7 @@ msgstr ""
 
 #: skycultures/western/constellation_names.eng.fab:32
 msgid "Draco"
-msgstr ""
+msgstr "Thiên Long"
 
 #: skycultures/western/constellation_names.eng.fab:33
 msgid "Norma"
@@ -3949,7 +3953,7 @@ msgstr ""
 
 #: skycultures/western/constellation_names.eng.fab:35
 msgid "Sagitta"
-msgstr ""
+msgstr "Thiên Tiễn"
 
 #: skycultures/western/constellation_names.eng.fab:36
 msgid "Fornax"
@@ -3957,7 +3961,7 @@ msgstr ""
 
 #: skycultures/western/constellation_names.eng.fab:37
 msgid "Gemini"
-msgstr ""
+msgstr "Song Tử"
 
 #: skycultures/western/constellation_names.eng.fab:38
 msgid "Camelopardalis"
@@ -3965,31 +3969,31 @@ msgstr ""
 
 #: skycultures/western/constellation_names.eng.fab:39
 msgid "Canis Major"
-msgstr ""
+msgstr "Đại Khuyển"
 
 #: skycultures/western/constellation_names.eng.fab:40
 msgid "Ursa Major"
-msgstr ""
+msgstr "Đại Hùng"
 
 #: skycultures/western/constellation_names.eng.fab:41
 msgid "Grus"
-msgstr ""
+msgstr "Thiên Hạc"
 
 #: skycultures/western/constellation_names.eng.fab:42
 msgid "Hercules"
-msgstr ""
+msgstr "Dũng Sĩ Hercules"
 
 #: skycultures/western/constellation_names.eng.fab:43
 msgid "Horologium"
-msgstr ""
+msgstr "Thời Chung"
 
 #: skycultures/western/constellation_names.eng.fab:44
 msgid "Hydra"
-msgstr ""
+msgstr "Trường Xà"
 
 #: skycultures/western/constellation_names.eng.fab:45
 msgid "Hydrus"
-msgstr ""
+msgstr "Thủy Xà"
 
 #: skycultures/western/constellation_names.eng.fab:46
 msgid "Indus"
@@ -4001,15 +4005,15 @@ msgstr ""
 
 #: skycultures/western/constellation_names.eng.fab:48
 msgid "Monoceros"
-msgstr ""
+msgstr "Kỳ Lân"
 
 #: skycultures/western/constellation_names.eng.fab:49
 msgid "Lepus"
-msgstr ""
+msgstr "Thiên Thố"
 
 #: skycultures/western/constellation_names.eng.fab:50
 msgid "Leo"
-msgstr ""
+msgstr "Sư Tử"
 
 #: skycultures/western/constellation_names.eng.fab:51
 msgid "Lupus"
@@ -4021,7 +4025,7 @@ msgstr ""
 
 #: skycultures/western/constellation_names.eng.fab:53
 msgid "Lyra"
-msgstr ""
+msgstr "Thiên Cầm"
 
 #: skycultures/western/constellation_names.eng.fab:54
 msgid "Antlia"
@@ -4029,7 +4033,7 @@ msgstr ""
 
 #: skycultures/western/constellation_names.eng.fab:55
 msgid "Microscopium"
-msgstr ""
+msgstr "Kính Hiển Vi"
 
 #: skycultures/western/constellation_names.eng.fab:56
 msgid "Musca"
@@ -4037,7 +4041,7 @@ msgstr ""
 
 #: skycultures/western/constellation_names.eng.fab:57
 msgid "Octans"
-msgstr ""
+msgstr "Kính Bát Phân"
 
 #: skycultures/western/constellation_names.eng.fab:58
 msgid "Apus"
@@ -4133,7 +4137,7 @@ msgstr ""
 
 #: skycultures/western/constellation_names.eng.fab:82
 msgid "Taurus"
-msgstr ""
+msgstr "Kim Ngưu"
 
 #: skycultures/western/constellation_names.eng.fab:83
 msgid "Telescopium"
@@ -4153,7 +4157,7 @@ msgstr ""
 
 #: skycultures/western/constellation_names.eng.fab:87
 msgid "Aquarius"
-msgstr ""
+msgstr "Bảo Bình"
 
 #: skycultures/western/constellation_names.eng.fab:88
 msgid "Virgo"
@@ -4237,10 +4241,6 @@ msgstr ""
 
 #: skycultures/western/star_names.fab:19
 msgid "Mira"
-msgstr ""
-
-#: skycultures/western/star_names.fab:20
-msgid "Polaris"
 msgstr ""
 
 #: skycultures/western/star_names.fab:21
@@ -4433,7 +4433,7 @@ msgstr ""
 
 #: skycultures/western/star_names.fab:69
 msgid "Sirius"
-msgstr ""
+msgstr "Thiên Lang"
 
 #: skycultures/western/star_names.fab:70
 msgid "Adhara"
@@ -4878,7 +4878,7 @@ msgstr ""
 
 #: skycultures/western/star_names.fab:181
 msgid "Vega"
-msgstr ""
+msgstr "Chức Nữ"
 
 #: skycultures/western/star_names.fab:182
 msgid "Sheliak"
@@ -4930,7 +4930,7 @@ msgstr ""
 
 #: skycultures/western/star_names.fab:194
 msgid "Altair"
-msgstr ""
+msgstr "Ngưu Lang"
 
 #: skycultures/western/star_names.fab:195
 msgid "Alshain"
@@ -4962,7 +4962,7 @@ msgstr ""
 
 #: skycultures/western/star_names.fab:202
 msgid "Deneb"
-msgstr ""
+msgstr "Thiên Tân"
 
 #: skycultures/western/star_names.fab:204
 msgid "Albali"
