--- a/po/stellarium/ckb.po
+++ b/po/stellarium/ckb.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-11-24 19:14+0700\n"
-"PO-Revision-Date: 2012-11-26 20:29+0000\n"
+"PO-Revision-Date: 2012-11-27 15:55+0000\n"
 "Last-Translator: daniel <d.danial42@yahoo.com>\n"
 "Language-Team: Kurdish (Sorani) <ckb@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-27 05:20+0000\n"
+"X-Launchpad-Export-Date: 2012-11-28 04:37+0000\n"
 "X-Generator: Launchpad (build 16309)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
@@ -31,7 +31,7 @@ msgstr "هێڵی یەکسان"
 
 #: src/core/modules/GridLinesMgr.cpp:576 src/ui_viewDialog.h:1172
 msgid "Horizon"
-msgstr ""
+msgstr "ئاسۆی"
 
 #: src/core/modules/GridLinesMgr.cpp:580
 msgid "Galactic Plane"
@@ -52,7 +52,7 @@ msgstr ", %1 م"
 
 #: src/core/modules/LandscapeMgr.cpp:512
 msgid "Planet: "
-msgstr ""
+msgstr "هەسارە: "
 
 #: src/core/modules/Nebula.cpp:115 plugins/Supernovae/src/Supernova.cpp:97
 #: plugins/Quasars/src/Quasar.cpp:92 plugins/Pulsars/src/Pulsar.cpp:125
@@ -79,7 +79,7 @@ msgstr ""
 #: src/core/modules/Nebula.cpp:128
 #, qt-format
 msgid "Size: %1"
-msgstr ""
+msgstr "قەبارە: %1"
 
 #: src/core/modules/Nebula.cpp:342
 msgid "Galaxy"
@@ -6772,15 +6772,15 @@ msgstr ""
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:350
 msgid "Red"
-msgstr ""
+msgstr "سوور"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:351
 msgid "Green"
-msgstr ""
+msgstr "سەوز"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:352
 msgid "Blue"
-msgstr ""
+msgstr "شین"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:353
 msgid "Font Size"
