--- a/po/stellarium/fi.po
+++ b/po/stellarium/fi.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-24 19:14+0700\n"
-"PO-Revision-Date: 2012-11-24 14:55+0000\n"
+"PO-Revision-Date: 2012-11-27 06:19+0000\n"
 "Last-Translator: Tuomas Teipainen <tmsteipainen1@gmail.com>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-25 05:14+0000\n"
-"X-Generator: Launchpad (build 16293)\n"
+"X-Launchpad-Export-Date: 2012-11-28 04:37+0000\n"
+"X-Generator: Launchpad (build 16309)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -1341,7 +1341,7 @@ msgstr "Eläinrata"
 #. TRANSLATORS: Name of script
 #: src/translations.h:202
 msgid "Mercury Triple Sunrise and Sunset"
-msgstr "Merkurius, kolminjkertainen auringonnousu ja -lasku"
+msgstr "Merkurius, kolminkertainen auringonnousu ja -lasku"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:204
@@ -6828,7 +6828,7 @@ msgstr "Ei akronikaalista nousua/laskua."
 
 #: plugins/Observability/src/Observability.cpp:603
 msgid "Cosmical rise/set"
-msgstr "Kosminen nousu/lasku."
+msgstr "Kosminen nousu/lasku"
 
 #: plugins/Observability/src/Observability.cpp:603
 msgid "No Cosmical rise/set."
