--- a/po/stellarium-skycultures/fi.po
+++ b/po/stellarium-skycultures/fi.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-20 09:48+0700\n"
-"PO-Revision-Date: 2012-11-20 16:12+0000\n"
+"PO-Revision-Date: 2012-11-28 19:02+0000\n"
 "Last-Translator: Tuomas Teipainen <tmsteipainen1@gmail.com>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-21 04:40+0000\n"
-"X-Generator: Launchpad (build 16293)\n"
+"X-Launchpad-Export-Date: 2012-11-29 05:11+0000\n"
+"X-Generator: Launchpad (build 16319)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -482,7 +482,7 @@ msgstr "Oinas"
 
 #: skycultures/arabic/constellation_names.eng.fab:6
 msgid "The Reins-holder"
-msgstr "Ohjasten pitäjä"
+msgstr "Ohjasten pitelijä"
 
 #: skycultures/arabic/constellation_names.eng.fab:7
 msgid "The Howler"
@@ -502,7 +502,7 @@ msgstr "Pieni koira"
 
 #: skycultures/arabic/constellation_names.eng.fab:11
 msgid "The Young Goat"
-msgstr "Nuori vuohi"
+msgstr "Nuori kauris"
 
 #: skycultures/arabic/constellation_names.eng.fab:12
 msgid "Who (Lady) Has Chair"
@@ -607,11 +607,11 @@ msgstr "Demonin pään kantaja"
 
 #: skycultures/arabic/constellation_names.eng.fab:37
 msgid "The Whale"
-msgstr "Valas"
+msgstr "Kala"
 
 #: skycultures/arabic/constellation_names.eng.fab:38
 msgid "The Southern Whale"
-msgstr "Etelän valas"
+msgstr "Etelän kala"
 
 #: skycultures/arabic/constellation_names.eng.fab:39
 msgid "The Arrow"
@@ -2636,7 +2636,7 @@ msgstr "Taivaan käytävä"
 
 #: skycultures/korean/constellation_names.eng.fab:138
 msgid "Flage of Saam"
-msgstr "Flage of Saam"
+msgstr "Saamin lippu"
 
 #: skycultures/korean/constellation_names.eng.fab:139
 msgid "Village of Sky"
