--- a/po/stellarium-skycultures/vi.po
+++ b/po/stellarium-skycultures/vi.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-20 09:48+0700\n"
-"PO-Revision-Date: 2012-11-27 13:17+0000\n"
+"PO-Revision-Date: 2012-11-28 10:42+0000\n"
 "Last-Translator: thanbang <thanbang00@gmail.com>\n"
 "Language-Team: Vietnamese <vi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-28 04:38+0000\n"
-"X-Generator: Launchpad (build 16309)\n"
+"X-Launchpad-Export-Date: 2012-11-29 05:11+0000\n"
+"X-Generator: Launchpad (build 16319)\n"
 
 #: skycultures/western/star_names.fab:20
 msgid "Polaris"
@@ -167,7 +167,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:159
 msgid "Andromeda Galaxy"
-msgstr ""
+msgstr "Thiên hà Tiên Nữ"
 
 #: nebulae/default/ngc2000names.dat:160
 msgid "Great Nebula in Orion"
@@ -3824,7 +3824,7 @@ msgstr ""
 
 #: skycultures/western/constellation_names.eng.fab:2
 msgid "Andromeda"
-msgstr ""
+msgstr "Tiên Nữ"
 
 #: skycultures/western/constellation_names.eng.fab:3
 msgid "Sculptor"
