Launchpad automatic translations update.

--- a/po/stellarium/ms.po
+++ b/po/stellarium/ms.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-24 19:14+0700\n"
-"PO-Revision-Date: 2012-11-20 10:05+0000\n"
+"PO-Revision-Date: 2012-11-30 15:42+0000\n"
 "Last-Translator: abuyop <Unknown>\n"
 "Language-Team: Malay <ms@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-25 05:17+0000\n"
-"X-Generator: Launchpad (build 16293)\n"
+"X-Launchpad-Export-Date: 2012-12-01 04:34+0000\n"
+"X-Generator: Launchpad (build 16319)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -1475,6 +1475,10 @@ msgid ""
 "occultations of both on the same day are very rare. Here's one that takes "
 "place 1/23/2048. In real speed."
 msgstr ""
+"Penghijaban Phobos terhadap Bumi adalah biasa, sepertimana penghijaban "
+"Musytari. Tetapi penghijaban kedua-duanya pada hari yang sama adalah sangat "
+"jarang berlaku. Peristiwa ini berlaku pada 1/23/2048. Dalam kelajuan yang "
+"sebenar."
 
 #: src/translations.h:243
 msgid ""
@@ -1483,6 +1487,11 @@ msgid ""
 "in the SH) again, then Mars totally eclipses the sun and Phobos, and then as "
 "Phobos emerges from the sun it passes through Mars' shadow and dims."
 msgstr ""
+"Phobos berada dihadapan Marikh dan mengorbit matahari, melepasinya dan "
+"kemudian berputar songsang kembali ke matahari dan hanya mengorbit separanya "
+"(hanya kelihatan dalam SH) lagi, kemudian Marikh sepenuhnya mengorbit "
+"matahari dan Phobos, dan selanjutnya Phobos muncul dari matahari melalui "
+"bayang Marikh dan menjadi malap."
 
 #: src/translations.h:244
 msgid ""
@@ -1508,18 +1517,22 @@ msgstr ""
 #: src/translations.h:248
 msgid "Transit of Venus as seen from Sydney Australia, 6th June 2012."
 msgstr ""
+"Lintasan Zuhrah sebagaimana dilihat dari Sydney Australia, 6 Jun 2012."
 
 #: src/translations.h:249
 msgid ""
 "A demonstration of the analemma - the path of the Sun across the sky during "
 "the year."
 msgstr ""
+"Demonstrasi analemma - laluan Matahari merentasi langit sepanjang tahun."
 
 #: src/translations.h:250
 msgid ""
 "Flash of the supernova observed by Tycho Brahe in 1572. The Supernovae "
 "plugin has to be enabled."
 msgstr ""
+"Pancaran supernova yang dicerap oleh Tycho Brahe pada tahun 1572. Pemalam "
+"Supernovae mesti dibenarkan."
 
 #: src/translations.h:255
 msgid "Andorra"
@@ -6640,23 +6653,23 @@ msgstr "Kemaskini data eksoplanet dari Internet"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:260
 msgid "Display mode for exoplanets"
-msgstr ""
+msgstr "Papar mod untuk exoplanet"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:262
 msgid "Plot all systems with exoplanets without labels"
-msgstr ""
+msgstr "Plot semua sistem dengan exoplanet tanpa label"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:264
 msgid "Enable display of distribution for exoplanets"
-msgstr ""
+msgstr "Benarkan paparan distribusi exoplanet"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:266
 msgid "Display exoplanets since their discovery"
-msgstr ""
+msgstr "Papar exoplanet semenjak penemuan mereka"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:268
 msgid "Enable timeline discovery of exoplanets"
-msgstr ""
+msgstr "Benarkan  penemuan garis masa exoplanet"
 
 #: plugins/Observability/src/Observability.cpp:66
 msgid "Observability analysis"
