--- a/po/stellarium-skycultures/vi.po
+++ b/po/stellarium-skycultures/vi.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-20 09:48+0700\n"
-"PO-Revision-Date: 2012-11-28 10:42+0000\n"
+"PO-Revision-Date: 2012-11-30 11:27+0000\n"
 "Last-Translator: thanbang <thanbang00@gmail.com>\n"
 "Language-Team: Vietnamese <vi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-29 05:11+0000\n"
+"X-Launchpad-Export-Date: 2012-12-01 04:34+0000\n"
 "X-Generator: Launchpad (build 16319)\n"
 
 #: skycultures/western/star_names.fab:20
@@ -1569,11 +1569,11 @@ msgstr ""
 #: skycultures/chinese/constellation_names.eng.fab:1
 #: skycultures/korean/constellation_names.eng.fab:219
 msgid "Northern Dipper"
-msgstr ""
+msgstr "Bắc Đẩu"
 
 #: skycultures/chinese/constellation_names.eng.fab:2
 msgid "Curved Array"
-msgstr "Bắc Đẩu"
+msgstr "Mảng cong"
 
 #: skycultures/chinese/constellation_names.eng.fab:3
 msgid "Coiled Thong"
@@ -1607,7 +1607,7 @@ msgstr ""
 #: skycultures/chinese/constellation_names.eng.fab:10
 #: skycultures/korean/constellation_names.eng.fab:197
 msgid "Three Steps"
-msgstr ""
+msgstr "Tam Đài"
 
 #: skycultures/chinese/constellation_names.eng.fab:11
 msgid "Imperial Guards"
@@ -1671,7 +1671,7 @@ msgstr ""
 
 #: skycultures/chinese/constellation_names.eng.fab:26
 msgid "Seven Excellencies"
-msgstr ""
+msgstr "Thất nương (7 chị em)"
 
 #: skycultures/chinese/constellation_names.eng.fab:27
 msgid "Market"
@@ -1870,11 +1870,11 @@ msgstr ""
 
 #: skycultures/chinese/constellation_names.eng.fab:74
 msgid "Flail"
-msgstr ""
+msgstr "Cái đập lúa"
 
 #: skycultures/chinese/constellation_names.eng.fab:75
 msgid "Spear"
-msgstr ""
+msgstr "Thiên thương"
 
 #: skycultures/chinese/constellation_names.eng.fab:76
 #: skycultures/korean/constellation_names.eng.fab:57
@@ -1920,7 +1920,7 @@ msgstr ""
 
 #: skycultures/chinese/constellation_names.eng.fab:86
 msgid "Xuanyuan"
-msgstr ""
+msgstr "Hiên Viên"
 
 #: skycultures/chinese/constellation_names.eng.fab:87
 msgid "Tripod"
