--- a/po/stellarium/vi.po
+++ b/po/stellarium/vi.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-24 19:14+0700\n"
-"PO-Revision-Date: 2012-11-28 10:38+0000\n"
+"PO-Revision-Date: 2012-11-30 10:54+0000\n"
 "Last-Translator: thanbang <thanbang00@gmail.com>\n"
 "Language-Team: Vietnamese <vi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-29 05:11+0000\n"
+"X-Launchpad-Export-Date: 2012-12-01 04:34+0000\n"
 "X-Generator: Launchpad (build 16319)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
@@ -1217,7 +1217,7 @@ msgstr "T"
 
 #: src/translations.h:149
 msgid "Arabic"
-msgstr ""
+msgstr "Ả Rập"
 
 #: src/translations.h:150
 msgid "Aztec"
@@ -1225,7 +1225,7 @@ msgstr ""
 
 #: src/translations.h:151
 msgid "Chinese"
-msgstr "Tiếng Trung Quốc"
+msgstr "Trung Quốc"
 
 #: src/translations.h:152
 msgid "Egyptian"
@@ -1237,7 +1237,7 @@ msgstr ""
 
 #: src/translations.h:154
 msgid "Korean"
-msgstr ""
+msgstr "Hàn Quốc"
 
 #: src/translations.h:155
 msgid "Lakota"
@@ -1958,11 +1958,11 @@ msgstr ""
 
 #: src/translations.h:370
 msgid "Democratic People's Republic of Korea"
-msgstr ""
+msgstr "Cộng hòa Dân chủ Nhân dân Triều Tiên"
 
 #: src/translations.h:371
 msgid "Republic of Korea"
-msgstr ""
+msgstr "Hàn Quốc"
 
 #: src/translations.h:372
 msgid "Kuwait"
