Launchpad automatic translations update.

--- a/po/stellarium/fi.po
+++ b/po/stellarium/fi.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-24 19:14+0700\n"
-"PO-Revision-Date: 2012-11-27 06:19+0000\n"
+"PO-Revision-Date: 2012-12-01 18:07+0000\n"
 "Last-Translator: Tuomas Teipainen <tmsteipainen1@gmail.com>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-28 04:37+0000\n"
-"X-Generator: Launchpad (build 16309)\n"
+"X-Launchpad-Export-Date: 2012-12-02 04:34+0000\n"
+"X-Generator: Launchpad (build 16319)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -1199,7 +1199,7 @@ msgstr "Makemake"
 #. TRANSLATORS: Name of supernova SN 1572A and script name
 #: src/translations.h:138
 msgid "Tycho's Supernova"
-msgstr "Tykon supernoca"
+msgstr "Tykon supernova"
 
 #. TRANSLATORS: Name of supernova SN 1604A
 #: src/translations.h:140
@@ -3215,7 +3215,7 @@ msgstr "Asetukset"
 
 #: src/ui_searchDialogGui.h:628
 msgid "names in English"
-msgstr "Nimet"
+msgstr "Nimet englanniksi"
 
 #: src/ui_searchDialogGui.h:629
 msgid "Search in list..."
@@ -6052,8 +6052,8 @@ msgid ""
 msgstr ""
 "Merkkaa kohteet jotka haluat tuoda. Jo asennetut kohteet on luetteloitu "
 "<i>kursiivilla</i>. <b>Lihavoituna</b> on listattu kohteet jotka löytyvät "
-"Stellariumista oletuksena.<br/>Huomaa että lisätessä suuri määrä kohteita "
-"kerralla Stellarium voi hidastua."
+"Stellariumista oletuksena.<br/>Huomaa että lisättäessä suuria määriä "
+"kohteita kerralla Stellarium voi hidastua."
 
 #: plugins/SolarSystemEditor/src/ui_mpcImportWindow.h:531
 msgid "Overwrite existing objects"
@@ -6109,7 +6109,7 @@ msgid ""
 "in a convenient location, or replace it with such a copy."
 msgstr ""
 "Voit luoda varmuuskopion kustomoidusta aurinkokuntatiedostosta sopivaan "
-"sijaintiin, tai korvata sen tälläaisella kopiolla."
+"sijaintiin, tai korvata sen tällaisella kopiolla."
 
 #: plugins/SolarSystemEditor/src/ui_solarSystemManagerWindow.h:302
 msgid "Copy the Solar System file..."
