Launchpad automatic translations update.

--- a/po/stellarium-skycultures/vi.po
+++ b/po/stellarium-skycultures/vi.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-20 09:48+0700\n"
-"PO-Revision-Date: 2012-11-30 11:27+0000\n"
+"PO-Revision-Date: 2012-12-02 11:26+0000\n"
 "Last-Translator: thanbang <thanbang00@gmail.com>\n"
 "Language-Team: Vietnamese <vi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-12-01 04:34+0000\n"
+"X-Launchpad-Export-Date: 2012-12-03 04:33+0000\n"
 "X-Generator: Launchpad (build 16319)\n"
 
 #: skycultures/western/star_names.fab:20
@@ -523,7 +523,7 @@ msgstr ""
 #: skycultures/arabic/constellation_names.eng.fab:15
 #: skycultures/western/constellation_names.eng.fab:6
 msgid "Cetus"
-msgstr ""
+msgstr "Kình Ngư"
 
 #: skycultures/arabic/constellation_names.eng.fab:16
 msgid "Bristle"
@@ -1577,7 +1577,7 @@ msgstr "Mảng cong"
 
 #: skycultures/chinese/constellation_names.eng.fab:3
 msgid "Coiled Thong"
-msgstr ""
+msgstr "Quán Tác"
 
 #: skycultures/chinese/constellation_names.eng.fab:4
 msgid "Wings"
@@ -1623,7 +1623,7 @@ msgstr ""
 
 #: skycultures/chinese/constellation_names.eng.fab:14
 msgid "Imperial Passageway"
-msgstr ""
+msgstr "Liên Đạo"
 
 #: skycultures/chinese/constellation_names.eng.fab:15
 msgid "Kitchen"
@@ -1651,7 +1651,7 @@ msgstr ""
 
 #: skycultures/chinese/constellation_names.eng.fab:21
 msgid "Root"
-msgstr ""
+msgstr "Thị Túc"
 
 #: skycultures/chinese/constellation_names.eng.fab:22
 msgid "Ramparts"
@@ -1842,7 +1842,7 @@ msgstr ""
 
 #: skycultures/chinese/constellation_names.eng.fab:67
 msgid "Weaving Girl"
-msgstr ""
+msgstr "Chức Nữ"
 
 #: skycultures/chinese/constellation_names.eng.fab:68
 msgid "Girl"
@@ -1866,7 +1866,7 @@ msgstr ""
 
 #: skycultures/chinese/constellation_names.eng.fab:73
 msgid "Establishment"
-msgstr ""
+msgstr "Kiên"
 
 #: skycultures/chinese/constellation_names.eng.fab:74
 msgid "Flail"
@@ -1879,12 +1879,12 @@ msgstr "Thiên thương"
 #: skycultures/chinese/constellation_names.eng.fab:76
 #: skycultures/korean/constellation_names.eng.fab:57
 msgid "Right Flag"
-msgstr ""
+msgstr "Hữu Kì"
 
 #: skycultures/chinese/constellation_names.eng.fab:77
 #: skycultures/korean/constellation_names.eng.fab:54
 msgid "Left Flag"
-msgstr ""
+msgstr "Tả Kỳ"
 
 #: skycultures/chinese/constellation_names.eng.fab:78
 msgid "Drumstick"
@@ -1900,11 +1900,11 @@ msgstr ""
 
 #: skycultures/chinese/constellation_names.eng.fab:81
 msgid "Western Door"
-msgstr ""
+msgstr "Cửa Tây"
 
 #: skycultures/chinese/constellation_names.eng.fab:82
 msgid "Eastern Door"
-msgstr ""
+msgstr "Cửa Đông"
 
 #: skycultures/chinese/constellation_names.eng.fab:83
 msgid "Farmland"
@@ -1936,7 +1936,7 @@ msgstr ""
 
 #: skycultures/chinese/constellation_names.eng.fab:90
 msgid "Market Officer"
-msgstr ""
+msgstr "Thiên Biện"
 
 #: skycultures/chinese/constellation_names.eng.fab:91
 msgid "Banner of Three Stars"
@@ -3820,7 +3820,7 @@ msgstr ""
 
 #: skycultures/western/constellation_names.eng.fab:1
 msgid "Aquila"
-msgstr ""
+msgstr "Thiên Ưng"
 
 #: skycultures/western/constellation_names.eng.fab:2
 msgid "Andromeda"
@@ -3832,15 +3832,15 @@ msgstr ""
 
 #: skycultures/western/constellation_names.eng.fab:4
 msgid "Ara"
-msgstr ""
+msgstr "Đàn Tế"
 
 #: skycultures/western/constellation_names.eng.fab:5
 msgid "Libra"
-msgstr ""
+msgstr "Thiên Bình"
 
 #: skycultures/western/constellation_names.eng.fab:7
 msgid "Aries"
-msgstr ""
+msgstr "Bạch Dương"
 
 #: skycultures/western/constellation_names.eng.fab:8
 #: skycultures/western/constellation_names.eng.fab:78
@@ -3853,15 +3853,15 @@ msgstr ""
 
 #: skycultures/western/constellation_names.eng.fab:10
 msgid "Bootes"
-msgstr ""
+msgstr "Mục Phu"
 
 #: skycultures/western/constellation_names.eng.fab:11
 msgid "Caelum"
-msgstr ""
+msgstr "Điêu Cụ"
 
 #: skycultures/western/constellation_names.eng.fab:12
 msgid "Chamaeleon"
-msgstr ""
+msgstr "Tắc Kè"
 
 #: skycultures/western/constellation_names.eng.fab:13
 msgid "Cancer"
@@ -3869,7 +3869,7 @@ msgstr "Cự Giải"
 
 #: skycultures/western/constellation_names.eng.fab:14
 msgid "Capricornus"
-msgstr ""
+msgstr "Ma Kết"
 
 #: skycultures/western/constellation_names.eng.fab:15
 msgid "Carina"
@@ -3877,7 +3877,7 @@ msgstr "Đáy Thuyền"
 
 #: skycultures/western/constellation_names.eng.fab:16
 msgid "Cassiopeia"
-msgstr ""
+msgstr "Tiên Hậu"
 
 #: skycultures/western/constellation_names.eng.fab:17
 msgid "Centaurus"
@@ -3893,7 +3893,7 @@ msgstr "Tóc Tiên"
 
 #: skycultures/western/constellation_names.eng.fab:20
 msgid "Canes Venatici"
-msgstr ""
+msgstr "Chó Săn"
 
 #: skycultures/western/constellation_names.eng.fab:21
 msgid "Auriga"
@@ -3901,15 +3901,15 @@ msgstr "Ngự Phu"
 
 #: skycultures/western/constellation_names.eng.fab:22
 msgid "Columba"
-msgstr ""
+msgstr "Thiên Cáp"
 
 #: skycultures/western/constellation_names.eng.fab:23
 msgid "Circinus"
-msgstr ""
+msgstr "Viên Quy"
 
 #: skycultures/western/constellation_names.eng.fab:24
 msgid "Crater"
-msgstr ""
+msgstr "Cự Tước"
 
 #: skycultures/western/constellation_names.eng.fab:25
 msgid "Corona Australis"
@@ -3921,7 +3921,7 @@ msgstr "Bắc Miện"
 
 #: skycultures/western/constellation_names.eng.fab:27
 msgid "Corvus"
-msgstr ""
+msgstr "Ô Nha"
 
 #: skycultures/western/constellation_names.eng.fab:28
 msgid "Crux"
@@ -3933,11 +3933,11 @@ msgstr "Thiên Nga"
 
 #: skycultures/western/constellation_names.eng.fab:30
 msgid "Delphinus"
-msgstr ""
+msgstr "Cá Heo"
 
 #: skycultures/western/constellation_names.eng.fab:31
 msgid "Dorado"
-msgstr ""
+msgstr "Kiếm Ngư"
 
 #: skycultures/western/constellation_names.eng.fab:32
 msgid "Draco"
@@ -3949,7 +3949,7 @@ msgstr ""
 
 #: skycultures/western/constellation_names.eng.fab:34
 msgid "Eridanus"
-msgstr ""
+msgstr "Sông Cái"
 
 #: skycultures/western/constellation_names.eng.fab:35
 msgid "Sagitta"
@@ -3957,7 +3957,7 @@ msgstr "Thiên Tiễn"
 
 #: skycultures/western/constellation_names.eng.fab:36
 msgid "Fornax"
-msgstr ""
+msgstr "Lò Luyện"
 
 #: skycultures/western/constellation_names.eng.fab:37
 msgid "Gemini"
@@ -3965,7 +3965,7 @@ msgstr "Song Tử"
 
 #: skycultures/western/constellation_names.eng.fab:38
 msgid "Camelopardalis"
-msgstr ""
+msgstr "Hươu Cao Cổ"
 
 #: skycultures/western/constellation_names.eng.fab:39
 msgid "Canis Major"
@@ -3985,7 +3985,7 @@ msgstr "Dũng Sĩ Hercules"
 
 #: skycultures/western/constellation_names.eng.fab:43
 msgid "Horologium"
-msgstr "Thời Chung"
+msgstr "Đồng Hồ"
 
 #: skycultures/western/constellation_names.eng.fab:44
 msgid "Hydra"
@@ -3997,11 +3997,11 @@ msgstr "Thủy Xà"
 
 #: skycultures/western/constellation_names.eng.fab:46
 msgid "Indus"
-msgstr ""
+msgstr "Anh-điêng"
 
 #: skycultures/western/constellation_names.eng.fab:47
 msgid "Lacerta"
-msgstr ""
+msgstr "Thằn Lằn"
 
 #: skycultures/western/constellation_names.eng.fab:48
 msgid "Monoceros"
@@ -4017,11 +4017,11 @@ msgstr "Sư Tử"
 
 #: skycultures/western/constellation_names.eng.fab:51
 msgid "Lupus"
-msgstr ""
+msgstr "Chó Sói"
 
 #: skycultures/western/constellation_names.eng.fab:52
 msgid "Lynx"
-msgstr ""
+msgstr "Linh Miêu"
 
 #: skycultures/western/constellation_names.eng.fab:53
 msgid "Lyra"
@@ -4029,7 +4029,7 @@ msgstr "Thiên Cầm"
 
 #: skycultures/western/constellation_names.eng.fab:54
 msgid "Antlia"
-msgstr ""
+msgstr "Máy bơm"
 
 #: skycultures/western/constellation_names.eng.fab:55
 msgid "Microscopium"
@@ -4045,7 +4045,7 @@ msgstr "Kính Bát Phân"
 
 #: skycultures/western/constellation_names.eng.fab:58
 msgid "Apus"
-msgstr ""
+msgstr "Thiên Yến"
 
 #: skycultures/western/constellation_names.eng.fab:59
 msgid "Ophiuchus"
@@ -4073,15 +4073,15 @@ msgstr ""
 
 #: skycultures/western/constellation_names.eng.fab:65
 msgid "Equuleus"
-msgstr ""
+msgstr "Tiểu Mã"
 
 #: skycultures/western/constellation_names.eng.fab:66
 msgid "Canis Minor"
-msgstr ""
+msgstr "Tiểu Khuyển"
 
 #: skycultures/western/constellation_names.eng.fab:67
 msgid "Leo Minor"
-msgstr ""
+msgstr "Sư Tử Nhỏ"
 
 #: skycultures/western/constellation_names.eng.fab:68
 msgid "Vulpecula"
