--- a/po/stellarium-skycultures/fr.po
+++ b/po/stellarium-skycultures/fr.po
@@ -18,14 +18,14 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-20 09:48+0700\n"
-"PO-Revision-Date: 2012-11-25 19:40+0000\n"
+"PO-Revision-Date: 2012-12-03 12:22+0000\n"
 "Last-Translator: Nicolas Martignoni <Unknown>\n"
 "Language-Team: <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-26 04:36+0000\n"
-"X-Generator: Launchpad (build 16293)\n"
+"X-Launchpad-Export-Date: 2012-12-04 04:51+0000\n"
+"X-Generator: Launchpad (build 16335)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -1575,7 +1575,7 @@ msgstr "Colotl Ixayac (Visage de scorpion)"
 #: skycultures/chinese/constellation_names.eng.fab:1
 #: skycultures/korean/constellation_names.eng.fab:219
 msgid "Northern Dipper"
-msgstr "Louche du Nord"
+msgstr "Casserole du Nord"
 
 #: skycultures/chinese/constellation_names.eng.fab:2
 msgid "Curved Array"
@@ -2114,19 +2114,19 @@ msgstr "Name of a Murdered Man (Procyon)"
 
 #: skycultures/inuit/star_names.fab:5
 msgid "Flickering"
-msgstr ""
+msgstr "La Scintillante"
 
 #: skycultures/inuit/star_names.fab:6
 msgid "Nephews"
-msgstr ""
+msgstr "Les Neveux"
 
 #: skycultures/inuit/star_names.fab:7
 msgid "The Old Man"
-msgstr ""
+msgstr "Le Vieux"
 
 #: skycultures/inuit/star_names.fab:8
 msgid "The Little Orphan Boy"
-msgstr ""
+msgstr "Le petit Orphelin"
 
 #: skycultures/korean/constellation_names.eng.fab:1
 msgid "Holy Kettle"
@@ -2309,7 +2309,7 @@ msgstr "Volaille du ciel"
 
 #: skycultures/korean/constellation_names.eng.fab:46
 msgid "Shrine of Sky"
-msgstr ""
+msgstr "Le Sanctuaire du Ciel"
 
 #: skycultures/korean/constellation_names.eng.fab:48
 msgid "Northeastern Nations"
@@ -2421,7 +2421,7 @@ msgstr "Palefrenier"
 
 #: skycultures/korean/constellation_names.eng.fab:77
 msgid "Charioteer"
-msgstr ""
+msgstr "Le Charetier"
 
 #: skycultures/korean/constellation_names.eng.fab:78
 msgid "Human"
@@ -2461,7 +2461,7 @@ msgstr "Palais isolé"
 
 #: skycultures/korean/constellation_names.eng.fab:88
 msgid "Official for Materials Supply"
-msgstr ""
+msgstr "L'Officiel de la fourniture du matériel"
 
 #: skycultures/korean/constellation_names.eng.fab:89
 msgid "Lightening"
@@ -2634,7 +2634,7 @@ msgstr "Pilier"
 
 #: skycultures/korean/constellation_names.eng.fab:135
 msgid "Puddle of Sky"
-msgstr ""
+msgstr "La Flaque du Ciel"
 
 #: skycultures/korean/constellation_names.eng.fab:136
 msgid "Kings"
@@ -2662,7 +2662,7 @@ msgstr "Général de frontière"
 
 #: skycultures/korean/constellation_names.eng.fab:142
 msgid "Celebration of Sky"
-msgstr ""
+msgstr "La Célébration du Ciel"
 
 #: skycultures/korean/constellation_names.eng.fab:143
 msgid "Flag of Emperor"
@@ -3581,15 +3581,15 @@ msgstr "Champ de bataille d'Asar"
 
 #: skycultures/norse/star_names.fab:1
 msgid "Guide Star"
-msgstr ""
+msgstr "Étoile Guide"
 
 #: skycultures/norse/star_names.fab:2
 msgid "Day Star"
-msgstr ""
+msgstr "Étoile du jour"
 
 #: skycultures/norse/star_names.fab:3
 msgid "South Star"
-msgstr ""
+msgstr "Étoile du Sud"
 
 #: skycultures/polynesian/constellation_names.eng.fab:1
 msgid "Bailer"
