--- a/po/stellarium/fi.po
+++ b/po/stellarium/fi.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-24 19:14+0700\n"
-"PO-Revision-Date: 2012-12-01 18:07+0000\n"
-"Last-Translator: Tuomas Teipainen <tmsteipainen1@gmail.com>\n"
+"PO-Revision-Date: 2012-12-03 18:02+0000\n"
+"Last-Translator: VeikkoM <veikko.makela@ursa.fi>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-12-02 04:34+0000\n"
-"X-Generator: Launchpad (build 16319)\n"
+"X-Launchpad-Export-Date: 2012-12-04 04:51+0000\n"
+"X-Generator: Launchpad (build 16335)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -66,7 +66,7 @@ msgstr "Tyyppi: <b>%1</b>"
 #: plugins/Exoplanets/src/Exoplanet.cpp:175
 #, qt-format
 msgid "Magnitude: <b>%1</b> (extincted to: <b>%2</b>)"
-msgstr "Magnitudi: <b>%1</b> (ekstinktoitu: <b>%2</b>)"
+msgstr "Magnitudi: <b>%1</b> (ekstinktiokorjattu: <b>%2</b>)"
 
 #: src/core/modules/Nebula.cpp:123 src/core/modules/Planet.cpp:439
 #: src/core/modules/MinorPlanet.cpp:200 src/core/modules/Comet.cpp:120
@@ -123,7 +123,7 @@ msgstr "Absoluuttinen magnitudi: %1"
 #: src/core/modules/Planet.cpp:455
 #, qt-format
 msgid "Ecliptic Topocentric (of date): %1/%2"
-msgstr "Ekliptinen toposentri (nykyinen): %1/%2"
+msgstr "Ekliptikaalinen toposentrinen (nykyinen) %1/%2"
 
 #: src/core/modules/Planet.cpp:456
 #, qt-format
@@ -202,17 +202,17 @@ msgstr "Magnitudi: <b>%1</b> (B-V: %2)"
 #: src/core/modules/StarWrapper.cpp:55
 #, qt-format
 msgid "Apparent Magnitude: <b>%1</b> (by extinction)"
-msgstr "Näennäinen magnitudi: <b>%1</b> (ekstinktoitu)"
+msgstr "Näennäinen magnitudi: <b>%1</b> (ektinktiokorjattu)"
 
 #: src/core/modules/StarWrapper.cpp:115 plugins/Quasars/src/Quasar.cpp:100
 #, qt-format
 msgid "Magnitude: <b>%1</b> (extincted to: <b>%2</b>. B-V: <b>%3</b>)"
-msgstr "Magnitudi: <b>%1</b> (ekstinkoitu: <b>%2</b>. B-V: <b>%3</b>)"
+msgstr "Magnitudi: <b>%1</b> (ekstinktiokorjattu: <b>%2</b>. B–V: <b>%3</b>)"
 
 #: src/core/modules/StarWrapper.cpp:119 plugins/Quasars/src/Quasar.cpp:114
 #, qt-format
 msgid "Magnitude: <b>%1</b> (B-V: <b>%2</b>)"
-msgstr "Magnitudi: <b>%1</b> (B-V: <b>%2</b>)"
+msgstr "Magnitudi: <b>%1</b> (B–V: <b>%2</b>)"
 
 #: src/core/modules/StarWrapper.cpp:130
 #: plugins/Exoplanets/src/Exoplanet.cpp:190
@@ -238,7 +238,7 @@ msgstr "Avaruusalus"
 
 #: src/core/StelProjector.cpp:123
 msgid "Maximum FOV: "
-msgstr "Enimmäisnäkökenttä: "
+msgstr "Maksiminäkökenttä: "
 
 #: src/core/StelProjectorClasses.cpp:25
 msgid "Perspective"
@@ -250,7 +250,7 @@ msgid ""
 "name for this projection method is <i>gnomonic projection</i>."
 msgstr ""
 "Perspektiiviprojektio pitää horisontin suorana viivana. Matemaattinen nimi "
-"projektioille on <i>gnomoninen projektio</i>."
+"tälle projektiolle on <i>gnomoninen projektio</i>."
 
 #: src/core/StelProjectorClasses.cpp:63
 msgid "Equal Area"
