--- a/po/stellarium-skycultures/ar.po
+++ b/po/stellarium-skycultures/ar.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-20 09:48+0700\n"
-"PO-Revision-Date: 2012-10-29 13:11+0000\n"
+"PO-Revision-Date: 2012-12-05 01:40+0000\n"
 "Last-Translator: Khalid AlAjaji <Unknown>\n"
 "Language-Team: Arabic <ar@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-21 04:38+0000\n"
-"X-Generator: Launchpad (build 16293)\n"
+"X-Launchpad-Export-Date: 2012-12-05 05:17+0000\n"
+"X-Generator: Launchpad (build 16335)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -31,7 +31,7 @@ msgstr "مجرة بارنارد"
 
 #: nebulae/default/ngc2000names.dat:116
 msgid "Bear's Paw galaxy"
-msgstr ""
+msgstr "مجرة قدم الدب"
 
 #: nebulae/default/ngc2000names.dat:117
 msgid "Beehive cluster"
@@ -191,7 +191,7 @@ msgstr "سديم الساعة الرملية"
 
 #: nebulae/default/ngc2000names.dat:166
 msgid "Hubble's variable nebula"
-msgstr ""
+msgstr "سديم هابل المتغير"
 
 #: nebulae/default/ngc2000names.dat:167
 msgid "Jewel Box"
@@ -370,7 +370,7 @@ msgstr "سديم لامدا قنطورس"
 
 #: nebulae/default/ngc2000names.dat:223
 msgid "ω Cen cluster"
-msgstr ""
+msgstr "حشد أوميجا قنطورس"
 
 #: nebulae/default/ngc2000names.dat:224
 msgid "ρ Oph nebula"
@@ -378,87 +378,87 @@ msgstr "سديم رو الحواء"
 
 #: nebulae/default/ngc2000names.dat:225
 msgid "Rim nebula"
-msgstr ""
+msgstr "سديم الإطار"
 
 #: nebulae/default/ngc2000names.dat:226
 msgid "Cat's Paw nebula"
-msgstr ""
+msgstr "سديم قدم القط"
 
 #: nebulae/default/ngc2000names.dat:227
 msgid "War and Peace nebula"
-msgstr ""
+msgstr "سديم الحرب والسلام"
 
 #: nebulae/default/ngc2000names.dat:228
 msgid "Little Ghost nebula"
-msgstr ""
+msgstr "سديم الشبح الصغير"
 
 #: nebulae/default/ngc2000names.dat:229
 msgid "Little Gem nebula"
-msgstr ""
+msgstr "سديم الجوهرة الصغيرة"
 
 #: nebulae/default/ngc2000names.dat:230
 msgid "Perseus A"
-msgstr ""
+msgstr "برشاوش ا"
 
 #: nebulae/default/ngc2000names.dat:231
 msgid "Fornax A"
-msgstr ""
+msgstr "الفرن ا"
 
 #: nebulae/default/ngc2000names.dat:232
 msgid "Fornax B"
-msgstr ""
+msgstr "الفرن ب"
 
 #: nebulae/default/ngc2000names.dat:233
 msgid "de Mairan's nebula"
-msgstr ""
+msgstr "سديم دي مارين"
 
 #: nebulae/default/ngc2000names.dat:234
 msgid "Flame nebula"
-msgstr ""
+msgstr "سديم الشعلة"
 
 #: nebulae/default/ngc2000names.dat:235
 msgid "Satellite cluster"
-msgstr ""
+msgstr "حشد تابع"
 
 #: nebulae/default/ngc2000names.dat:236
 msgid "Thor's Helmet"
-msgstr ""
+msgstr "خوذة تور"
 
 #: nebulae/default/ngc2000names.dat:237
 msgid "Caroline's cluster"
-msgstr ""
+msgstr "حشد كارولين"
 
 #: nebulae/default/ngc2000names.dat:238
 msgid "τ Canis Majoris cluster"
-msgstr ""
+msgstr "حشد تاو الكلب الأكبر"
 
 #: nebulae/default/ngc2000names.dat:239
 msgid "Pencil nebula"
-msgstr ""
+msgstr "سديم قلم الرصاص"
 
 #: nebulae/default/ngc2000names.dat:240
 msgid "Supernova Factory"
-msgstr ""
+msgstr "مصنع المستعرات العظيمة"
 
 #: nebulae/default/ngc2000names.dat:241
 msgid "Galaxy cluster"
-msgstr ""
+msgstr "حشد مجري"
 
 #: nebulae/default/ngc2000names.dat:242
 msgid "Southern Pinwheel galaxy"
-msgstr ""
+msgstr "مجرة المروحة الجنوبية"
 
 #: nebulae/default/ngc2000names.dat:243
 msgid "Pinwheel galaxy"
-msgstr ""
+msgstr "مجرة المروحة"
 
 #: nebulae/default/ngc2000names.dat:244
 msgid "Atoms for Peace galaxy"
-msgstr ""
+msgstr "ذرات مجرة السلام"
 
 #: nebulae/default/ngc2000names.dat:245
 msgid "Grand Design galaxy"
-msgstr ""
+msgstr "مجرة التصميم البديع"
 
 #: skycultures/arabic/constellation_names.eng.fab:1
 msgid "The Shackled Woman"
