--- a/po/stellarium-skycultures/fi.po
+++ b/po/stellarium-skycultures/fi.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-20 09:48+0700\n"
-"PO-Revision-Date: 2012-11-28 19:02+0000\n"
+"PO-Revision-Date: 2012-12-05 04:57+0000\n"
 "Last-Translator: Tuomas Teipainen <tmsteipainen1@gmail.com>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-29 05:11+0000\n"
-"X-Generator: Launchpad (build 16319)\n"
+"X-Launchpad-Export-Date: 2012-12-05 05:17+0000\n"
+"X-Generator: Launchpad (build 16335)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -955,7 +955,7 @@ msgstr "Toisen harppauksen pohjoinen pää"
 
 #: skycultures/arabic/star_names.fab:77
 msgid "The forehead of the lion"
-msgstr "Leijonan otsa"
+msgstr "Leijonan kaula"
 
 #: skycultures/arabic/star_names.fab:78
 msgid "The southern one of the second leap"
@@ -975,7 +975,7 @@ msgstr "Karhu"
 
 #: skycultures/arabic/star_names.fab:82
 msgid "One of Al-zubarah"
-msgstr "Yksi Al-zuburaheista"
+msgstr "Ensimmäinen Al-zuburah"
 
 #: skycultures/arabic/star_names.fab:83
 msgid "Second Al-zubarah"
