--- a/po/stellarium-skycultures/fr.po
+++ b/po/stellarium-skycultures/fr.po
@@ -18,14 +18,14 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-20 09:48+0700\n"
-"PO-Revision-Date: 2012-12-03 12:22+0000\n"
+"PO-Revision-Date: 2012-12-08 18:00+0000\n"
 "Last-Translator: Nicolas Martignoni <Unknown>\n"
 "Language-Team: <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-12-04 04:51+0000\n"
-"X-Generator: Launchpad (build 16335)\n"
+"X-Launchpad-Export-Date: 2012-12-09 04:36+0000\n"
+"X-Generator: Launchpad (build 16341)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -921,7 +921,7 @@ msgstr "Suhail qui pousse à jurer"
 
 #: skycultures/arabic/star_names.fab:66
 msgid "One of the antelopes"
-msgstr ""
+msgstr "Le Museau"
 
 #: skycultures/arabic/star_names.fab:67
 msgid "Northern donkey"
@@ -937,7 +937,7 @@ msgstr "Les Pinces"
 
 #: skycultures/arabic/star_names.fab:70
 msgid "The third leap"
-msgstr "Le Saut des gazelles"
+msgstr "Le troisième saut boréal"
 
 #: skycultures/arabic/star_names.fab:71
 msgid "Suhayl the weight"
@@ -961,7 +961,7 @@ msgstr "Le Coeur du lion"
 
 #: skycultures/arabic/star_names.fab:76
 msgid "The northern one of the second leap"
-msgstr "La Main du grand Ours"
+msgstr "Le deuxième saut boréal"
 
 #: skycultures/arabic/star_names.fab:77
 msgid "The forehead of the lion"
@@ -969,7 +969,7 @@ msgstr "Le Front du lion"
 
 #: skycultures/arabic/star_names.fab:78
 msgid "The southern one of the second leap"
-msgstr "La Main du grand Ours"
+msgstr "Le deuxième saut austral"
 
 #: skycultures/arabic/star_names.fab:79
 msgid "The cup"
@@ -993,11 +993,11 @@ msgstr "Les deux Trous"
 
 #: skycultures/arabic/star_names.fab:84
 msgid "The southern one of the first leap"
-msgstr ""
+msgstr "Le premier saut austral"
 
 #: skycultures/arabic/star_names.fab:85
 msgid "The northern one of the first leap"
-msgstr ""
+msgstr "Le premier saut boréal"
 
 #: skycultures/arabic/star_names.fab:86
 msgid "Tail of the lion"
@@ -1017,7 +1017,7 @@ msgstr "La Tente"
 
 #: skycultures/arabic/star_names.fab:90
 msgid "The insertion-point of the Bear's tail"
-msgstr ""
+msgstr "Le point d'attache de la queue"
 
 #: skycultures/arabic/star_names.fab:91
 msgid "The wing"
@@ -1033,7 +1033,7 @@ msgstr "Le Golfe"
 
 #: skycultures/arabic/star_names.fab:94
 msgid "The lion Liver"
-msgstr ""
+msgstr "Le Foie du Lion"
 
 #: skycultures/arabic/star_names.fab:95
 msgid "Vine-harvestress"
@@ -1074,7 +1074,7 @@ msgstr "Le Levier armé"
 
 #: skycultures/arabic/star_names.fab:104
 msgid "One of Al-ghofer's"
-msgstr ""
+msgstr "La Traîne"
 
 #: skycultures/arabic/star_names.fab:105
 msgid "The shepherd"
@@ -1126,7 +1126,7 @@ msgstr "La Brillante du Bris"
 
 #: skycultures/arabic/star_names.fab:117
 msgid "Neck of the snake"
-msgstr ""
+msgstr "Le Cou du serpent"
 
 #: skycultures/arabic/star_names.fab:118
 msgid "Scorpion forehead"
@@ -1198,7 +1198,7 @@ msgstr "Le Chien du berger"
 
 #: skycultures/arabic/star_names.fab:135
 msgid "The third incantation"
-msgstr ""
+msgstr "La Mâchoire du serpent"
 
 #: skycultures/arabic/star_names.fab:136
 msgid "The first incantation"
@@ -1262,7 +1262,7 @@ msgstr "L'Oiseau"
 
 #: skycultures/arabic/star_names.fab:151
 msgid "The arrow"
-msgstr ""
+msgstr "La Flèche"
 
 #: skycultures/arabic/star_names.fab:152 skycultures/arabic/star_names.fab:154
 msgid "One of the balance's"
@@ -1286,11 +1286,11 @@ msgstr "La Poitrine de la poule"
 
 #: skycultures/arabic/star_names.fab:158
 msgid "One of the sitting's"
-msgstr ""
+msgstr "La première Perle"
 
 #: skycultures/arabic/star_names.fab:159
 msgid "Second one of the sitting's"
-msgstr ""
+msgstr "La deuxième Perle"
 
 #: skycultures/arabic/star_names.fab:160
 msgid "Tail of the hen"
@@ -1350,7 +1350,7 @@ msgstr "La 1ère Propice des bestiaux"
 
 #: skycultures/arabic/star_names.fab:174
 msgid "The hip"
-msgstr ""
+msgstr "La Hanche"
 
 #: skycultures/arabic/star_names.fab:175
 msgid "First lucky star of the tents"
@@ -1386,19 +1386,19 @@ msgstr "L'Épaule du cheval"
 
 #: skycultures/arabic/star_names.fab:183
 msgid "Fourth one of Alkalaes"
-msgstr ""
+msgstr "La quatrième des Hyades"
 
 #: skycultures/arabic/star_names.fab:184
 msgid "Third one of Alkalaes"
-msgstr ""
+msgstr "La troisième des Hyades"
 
 #: skycultures/arabic/star_names.fab:185
 msgid "Second one of Alkalaes"
-msgstr ""
+msgstr "La deuxième des Hyades"
 
 #: skycultures/arabic/star_names.fab:186
 msgid "One of Alkalaes"
-msgstr ""
+msgstr "La première des Hyades"
 
 #: skycultures/arabic/star_names.fab:187
 msgid "The Scattered stars"
@@ -1410,7 +1410,7 @@ msgstr ""
 
 #: skycultures/arabic/star_names.fab:189
 msgid "The wronged"
-msgstr ""
+msgstr "Le Gardien des Autruches"
 
 #: skycultures/arabic/star_names.fab:190
 msgid "Incoming ostriches"
@@ -1426,7 +1426,7 @@ msgstr "La 3e autruche qui revient de boire"
 
 #: skycultures/arabic/star_names.fab:193
 msgid "Fourth one of the cavalry's"
-msgstr ""
+msgstr "Le quatrième Cavalier"
 
 #: skycultures/arabic/star_names.fab:194
 msgid "First shrike"
@@ -1438,35 +1438,35 @@ msgstr ""
 
 #: skycultures/arabic/star_names.fab:196
 msgid "Fourth one of the sitting's"
-msgstr ""
+msgstr "La quatrième Perle"
 
 #: skycultures/arabic/star_names.fab:197
 msgid "Third one of the sitting's"
-msgstr ""
+msgstr "La troisième Perle"
 
 #: skycultures/arabic/star_names.fab:198
 msgid "Second one of the cavalry's"
-msgstr ""
+msgstr "Le deuxième Cavalier"
 
 #: skycultures/arabic/star_names.fab:199
 msgid "The shining"
-msgstr ""
+msgstr "La Brillante"
 
 #: skycultures/arabic/star_names.fab:200
 msgid "Second lucky star of the rain"
-msgstr ""
+msgstr "La seconde Propice de la pluie"
 
 #: skycultures/arabic/star_names.fab:201
 msgid "Lucky star of the excellent one"
-msgstr ""
+msgstr "La Propice de l'Excellent"
 
 #: skycultures/arabic/star_names.fab:202
 msgid "Second lucky star of the high-minded man"
-msgstr ""
+msgstr "La seconde Propice du Magnanime"
 
 #: skycultures/arabic/star_names.fab:203
 msgid "Second one of the anguish"
-msgstr ""
+msgstr "La Corde du Puits"
 
 #: skycultures/arabic/star_names.fab:204
 msgid "First one of the anguish"
@@ -1474,23 +1474,23 @@ msgstr ""
 
 #: skycultures/arabic/star_names.fab:205
 msgid "First wolf"
-msgstr ""
+msgstr "Le premier Loup"
 
 #: skycultures/arabic/star_names.fab:206
 msgid "Second wolf"
-msgstr ""
+msgstr "Le deuxième Loup"
 
 #: skycultures/arabic/star_names.fab:207
 msgid "First wolf paw"
-msgstr ""
+msgstr "Première griffe du Loup"
 
 #: skycultures/arabic/star_names.fab:208
 msgid "Second wolf paw"
-msgstr ""
+msgstr "Deuxième griffe du Loup"
 
 #: skycultures/arabic/star_names.fab:209
 msgid "Second one of the andiron's"
-msgstr ""
+msgstr "Le Ventre du dragon boréal"
 
 #: skycultures/arabic/star_names.fab:210
 msgid "Third one of the andiron's"
