update stellarium icon

--- a/README
+++ b/README
@@ -258,9 +258,11 @@ for more details on the location of the user data directory for your OS.
 	4.11 Images of M17, M44, NGC856, NGC884 from Maxime Spano
 	4.12 Constellation art, GUI buttons, logo created by Johan Meuris
 		(Jomejome) (jomejome at users.sourceforge.net)
-		http://users.pandora.be/jomejom/
+		http://www.johanmeuris.eu/
 		License: released under the Free Art License
 		(http://artlibre.org/licence.php/lalgb.html)
+	     Icon created by Johan Meuris
+	        License: Creative Commons Attribution-ShareAlike 3.0 Unported
 	4.13 The "earth-clouds" texture includes imagery owned by NASA.
 		See NASA's Visible Earth project at http://visibleearth.nasa.gov/
 		License: 1. The imagery is free of licensing fees
